--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: colmi_r6_fbp
-description: "Reads data from COLMi R6 Smart Ring using flutter_blue_plus"
+name: colmi_r06_fbp
+description: "Reads and writes data to and from COLMi R02-R06 Smart Rings using flutter_blue_plus"
 publish_to: 'none'
 version: 0.1.0
 
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.32.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
